--- a/index.html
+++ b/index.html
@@ -4,118 +4,132 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mesto</title>
+    <title>Место</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="body">
-    <header class="header">
-      <img src="./images/logo.svg" alt="Логоти Место" />
-    </header>
-    <main class="page">
-      <section class="profile">
-        <div class="profile__container">
-          <img
-            class="profile__avatar"
-            src="./images/avatar.jpg"
-            alt="Изображение профиля"
-          />
-          <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__profession">Исследователь океана</p>
-            <div class="profile__edit-btn"></div>
+    <div class="content">
+      <header class="header">
+        <img src="./images/logo.svg" class="header__logo" alt="Логоти Место" />
+      </header>
+      <main class="page">
+        <section class="profile">
+          <div class="profile__container">
+            <img
+              class="profile__avatar"
+              src="./images/avatar.jpg"
+              alt="Изображение профиля"
+            />
+            <div class="profile__info">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <p class="profile__profession">Исследователь океана</p>
+              <button type="button" class="profile__edit-btn"></button>
+            </div>
           </div>
-        </div>
-        <img
-          class="profile__add-btn"
-          src="./images/add_button.svg"
-          alt="Кнопка добавления"
-        />
-      </section>
+          <button
+            type="submit"
+            class="profile__add-btn"
+            src="./images/add_button.svg"
+          ></button>
+        </section>
 
-      <section class="elements">
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/fortress.jpg"
-            alt="Крепость"
-          />
-          <div class="element__base">
-            <p class="element__title">Карачаевск</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
+        <section class="elements">
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/fortress.jpg"
+              alt="Крепость"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
 
-        <div class="element">
-          <img class="element__image" src="./images/desert.jpg" alt="Пустыня" />
-          <div class="element__base">
-            <p class="element__title">Эльбрус</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/desert.jpg"
+              alt="Пустыня"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Эльбрус</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
 
-        <div class="element">
-          <img class="element__image" src="./images/mountains.jpg" alt="Горы" />
-          <div class="element__base">
-            <p class="element__title">Домбай</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/mountains.jpg"
+              alt="Горы"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Домбай</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
 
-        <div class="element">
-          <img class="element__image" src="./images/desert.jpg" alt="Пустыня" />
-          <div class="element__base">
-            <p class="element__title">Эльбрус</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/desert.jpg"
+              alt="Пустыня"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Эльбрус</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
 
-        <div class="element">
-          <img class="element__image" src="./images/mountains.jpg" alt="Горы" />
-          <div class="element__base">
-            <p class="element__title">Домбай</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/mountains.jpg"
+              alt="Горы"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Домбай</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
 
-        <div class="element">
-          <img
-            class="element__image"
-            src="./images/fortress.jpg"
-            alt="Крепость"
-          />
-          <div class="element__base">
-            <p class="element__title">Карачаевск</p>
-            <div class="element__like"></div>
-          </div>
-        </div>
-      </section>
-    </main>
+          <article class="element">
+            <img
+              class="element__image"
+              src="./images/fortress.jpg"
+              alt="Крепость"
+            />
+            <div class="element__base">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like"></button>
+            </div>
+          </article>
+        </section>
+      </main>
+    </div>
 
     <footer class="footer">
       <p class="footer__text">&copy; 2022 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup_hidden">
+    <div class="popup">
       <div class="popup__content">
-        <img
-          class="popup__close-btn"
-          src="./images/Close_Icon.svg"
-          alt="Кнопа закрытия окна"
-        />
+        <button type="button" class="popup__close-btn"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <div class="popup__inputs">
+        <form class="popup__inputs" name="popup__inputs">
           <input
-            class="popup__input popup__name"
+            class="popup__input_type_name"
             type="text"
             placeholder="Жак-Ив Кусто"
           />
           <input
-            class="popup__input popup__profession"
+            class="popup__input_type_profession"
             type="text"
             placeholder="Исследователь океана"
           />
-        </div>
-        <button class="popup__save-btn">Сохранить</button>
+          <button type="submit" class="popup__save-btn">Сохранить</button>
+        </form>
       </div>
     </div>
     <script src="./pages/index.js"></script>
