fix: поправить ошибку index.html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
               <button type="button" class="profile__edit-btn"></button>
             </div>
           </div>
-          <button
-            type="submit"
-            class="profile__add-btn"
-            src="./images/add_button.svg"
-          ></button>
+          <button type="submit" class="profile__add-btn"></button>
         </section>
 
         <section class="elements">
