--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__inputs" name="popup__inputs">
           <input
-            class="popup__input_type_name"
+            class="popup__inputs_type_name"
             type="text"
             placeholder="Жак-Ив Кусто"
           />
           <input
-            class="popup__input_type_profession"
+            class="popup__inputs_type_profession"
             type="text"
             placeholder="Исследователь океана"
           />
