fix: правки ошибок в вёрстке

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <button type="button" class="profile__edit-btn"></button>
             </div>
           </div>
-          <button type="submit" class="profile__add-btn"></button>
+          <button type="button" class="profile__add-btn"></button>
         </section>
 
         <section class="elements">
@@ -115,11 +115,13 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__inputs" name="popup__inputs">
           <input
+            name="popup_name"
             class="popup__input popup__input_type_name"
             type="text"
             placeholder="Жак-Ив Кусто"
           />
           <input
+            name="popup_profession"
             class="popup__input popup__input_type_profession"
             type="text"
             placeholder="Исследователь океана"
