--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
               alt="Изображение профиля"
             />
             <div class="profile__info">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <div class="profile__title">
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <button type="button" class="profile__edit-btn"></button>
+              </div>
               <p class="profile__profession">Исследователь океана</p>
-              <button type="button" class="profile__edit-btn"></button>
             </div>
           </div>
           <button type="button" class="profile__add-btn"></button>
@@ -103,33 +105,33 @@
           </article>
         </section>
       </main>
-    </div>
 
-    <footer class="footer">
-      <p class="footer__text">&copy; 2022 Mesto Russia</p>
-    </footer>
+      <footer class="footer">
+        <p class="footer__text">&copy; 2022 Mesto Russia</p>
+      </footer>
 
-    <div class="popup">
-      <div class="popup__content">
-        <button type="button" class="popup__close-btn"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__inputs" name="popup__inputs">
-          <input
-            name="popup_name"
-            class="popup__input popup__input_type_name"
-            type="text"
-            placeholder="Жак-Ив Кусто"
-          />
-          <input
-            name="popup_profession"
-            class="popup__input popup__input_type_profession"
-            type="text"
-            placeholder="Исследователь океана"
-          />
-          <button type="submit" class="popup__save-btn">Сохранить</button>
-        </form>
+      <div class="popup">
+        <div class="popup__content">
+          <button type="button" class="popup__close-btn"></button>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__inputs" name="popup__inputs">
+            <input
+              name="popup_name"
+              class="popup__input popup__input_type_name"
+              type="text"
+              placeholder="Жак-Ив Кусто"
+            />
+            <input
+              name="popup_profession"
+              class="popup__input popup__input_type_profession"
+              type="text"
+              placeholder="Исследователь океана"
+            />
+            <button type="submit" class="popup__save-btn">Сохранить</button>
+          </form>
+        </div>
       </div>
+      <script src="./pages/index.js"></script>
     </div>
-    <script src="./pages/index.js"></script>
   </body>
 </html>
