fix: исправил ошибку в атрибуте тега

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <template class="template template__new-card">
       <article class="element">
-        <img class="element__image" src="" alt="" />
+        <img class="element__image" src="#" alt="#" />
         <div class="element__trash"></div>
         <div class="element__base">
           <h2 class="element__title"></h2>
