--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="footer__text">&copy; 2022 Mesto Russia</p>
       </footer>
 
-      <div class="popup popup__edit-profile">
+      <div class="popup popup-edit-profile">
         <div class="popup__content">
           <button type="button" class="popup__close-btn"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="popup popup__add-place">
+      <div class="popup popup-add-place">
         <div class="popup__content">
           <button type="button" class="popup__close-btn"></button>
           <h2 class="popup__title">Новое место</h2>
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div class="popup popup__image">
+      <div class="popup popup-image">
         <div class="popup__content-image">
           <button type="button" class="popup__close-btn"></button>
           <img class="popup__picture" />
