--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
       </article>
     </template>
 
-    <script deferb src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
