--- a/index.html
+++ b/index.html
@@ -37,85 +37,91 @@
         <p class="footer__text">&copy; 2022 Mesto Russia</p>
       </footer>
 
-      <div class="popup popup-edit-profile">
-        <div class="popup__content">
-          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form
-            class="popup__inputs"
-            id="edit-profile-form"
-            name="popup__inputs"
-          >
-            <div class="popup__divide-container">
-              <input
-                name="popup_name"
-                class="popup__input popup__input_type_name"
-                type="text"
-                placeholder="Имя"
-                id="popup__name"
-                required
-                minlength="2"
-                maxlength="40"
-              />
-              <span class="popup__error popup__name-error"></span>
-            </div>
-            <div class="popup__divide-container">
-              <input
-                name="popup_profession"
-                class="popup__input popup__input_type_profession"
-                type="text"
-                placeholder="О себе"
-                id="popup__profession"
-                required
-                minlength="2"
-                maxlength="200"
-              />
-              <span class="popup__error popup__profession-error"></span>
-            </div>
-            <button type="submit" class="popup__save-btn" aria-label="Кнопка отправки формы на сервер">Сохранить</button>
-          </form>
+      <div class="popup popup_type_profile">
+        <div class="popup__body">
+          <div class="popup__content">
+            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <form
+              class="popup__inputs"
+              id="edit-profile-form"
+              name="popup__inputs"
+            >
+              <div class="popup__divide-container">
+                <input
+                  name="popup_name"
+                  class="popup__input popup__input_type_name"
+                  type="text"
+                  placeholder="Имя"
+                  id="popup__name"
+                  required
+                  minlength="2"
+                  maxlength="40"
+                />
+                <span class="popup__error popup__name-error"></span>
+              </div>
+              <div class="popup__divide-container">
+                <input
+                  name="popup_profession"
+                  class="popup__input popup__input_type_profession"
+                  type="text"
+                  placeholder="О себе"
+                  id="popup__profession"
+                  required
+                  minlength="2"
+                  maxlength="200"
+                />
+                <span class="popup__error popup__profession-error"></span>
+              </div>
+              <button type="submit" class="popup__save-btn" aria-label="Кнопка отправки формы на сервер">Сохранить</button>
+            </form>
+          </div>
         </div>
       </div>
 
-      <div class="popup popup-add-place">
-        <div class="popup__content">
-          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-          <h2 class="popup__title">Новое место</h2>
-          <form class="popup__inputs" id="add-place-form" name="popup__inputs">
-            <div class="popup__divide-container">
-              <input
-                name="popup_name"
-                class="popup__input popup__input_type_title"
-                type="text"
-                placeholder="Название"
-                id="popup__title"
-                required
-                minlength="2"
-                maxlength="30"
-              />
-              <span class="popup__error popup__title-error"></span>
-            </div>
-            <div class="popup__divide-container">
-              <input
-                name="popup_link"
-                class="popup__input popup__input_type_link"
-                type="url"
-                placeholder="Ссылка на картинку"
-                id="popup__link"
-                required
-              />
-              <span class="popup__error popup__link-error"></span>
-            </div>
-            <button type="submit" class="popup__save-btn popup__btn-disabled" disabled aria-label="Кнопка создания новой карточки">Создать</button>
-          </form>
+      <div class="popup popup_type_card-add">
+        <div class="popup__body">
+          <div class="popup__content">
+            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+            <h2 class="popup__title">Новое место</h2>
+            <form class="popup__inputs" id="add-place-form" name="popup__inputs">
+              <div class="popup__divide-container">
+                <input
+                  name="popup_name"
+                  class="popup__input popup__input_type_title"
+                  type="text"
+                  placeholder="Название"
+                  id="popup__title"
+                  required
+                  minlength="2"
+                  maxlength="30"
+                />
+                <span class="popup__error popup__title-error"></span>
+              </div>
+              <div class="popup__divide-container">
+                <input
+                  name="popup_link"
+                  class="popup__input popup__input_type_link"
+                  type="url"
+                  placeholder="Ссылка на картинку"
+                  id="popup__link"
+                  required
+                />
+                <span class="popup__error popup__link-error"></span>
+              </div>
+              <button type="submit" class="popup__save-btn popup__btn-disabled" disabled aria-label="Кнопка создания новой карточки">Создать</button>
+            </form>
+          </div>
         </div>
       </div>
 
-      <div class="popup popup-image">
-        <div class="popup__content-image">
-          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-          <img class="popup__picture" />
-          <h2 class="popup__text"></h2>
+      <div class="popup popup_type_picture">
+        <div class="popup__body">
+          <div class="popup__content-image">
+            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+            <img class="popup__picture" />
+            <h2 class="popup__text"></h2>
+          </div>
         </div>
       </div>
     </div>
@@ -131,8 +137,10 @@
       </article>
     </template>
 
-    <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/Card.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/Card.js" defer></script>
+    <script type="module" src="./scripts/FormValidator.js" defer></script>
+    <script type="module" src="./scripts/initialCards.js" defer></script>
+    <script type="module" src="./scripts/selectors.js" defer></script>
   </body>
 </html>
