--- a/index.html
+++ b/index.html
@@ -1,146 +1,113 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
-  </head>
-  <body class="body">
-    <div class="content">
-      <header class="header">
-        <img src="./images/logo.svg" class="header__logo" alt="Логоти Место" />
-      </header>
-      <main class="page">
-        <section class="profile">
-          <div class="profile__container">
-            <img
-              class="profile__avatar"
-              src="./images/avatar.jpg"
-              alt="Изображение профиля"
-            />
-            <div class="profile__info">
-              <div class="profile__title">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button type="button" class="profile__edit-btn" aria-label="Кнопка изменения данных профиля"></button>
-              </div>
-              <p class="profile__profession">Исследователь океана</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Место</title>
+  <link rel="stylesheet" href="./pages/index.css" />
+</head>
+
+<body class="body">
+  <div class="content">
+    <header class="header">
+      <img src="./images/logo.svg" class="header__logo" alt="Логоти Место" />
+    </header>
+    <main class="page">
+      <section class="profile">
+        <div class="profile__container">
+          <img class="profile__avatar" src="./images/avatar.jpg" alt="Изображение профиля" />
+          <div class="profile__info">
+            <div class="profile__title">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <button type="button" class="profile__edit-btn" aria-label="Кнопка изменения данных профиля"></button>
             </div>
-          </div>
-          <button type="button" class="profile__add-btn" aria-label="Кнопка добавления новой карточки"></button>
-        </section>
-
-        <section class="elements"></section>
-      </main>
-      <footer class="footer">
-        <p class="footer__text">&copy; 2022 Mesto Russia</p>
-      </footer>
-
-      <div class="popup popup_type_profile">
-        <div class="popup__body">
-          <div class="popup__content">
-            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <form
-              class="popup__inputs"
-              id="edit-profile-form"
-              name="popup__inputs"
-            >
-              <div class="popup__divide-container">
-                <input
-                  name="popup_name"
-                  class="popup__input popup__input_type_name"
-                  type="text"
-                  placeholder="Имя"
-                  id="popup__name"
-                  required
-                  minlength="2"
-                  maxlength="40"
-                />
-                <span class="popup__error popup__name-error"></span>
-              </div>
-              <div class="popup__divide-container">
-                <input
-                  name="popup_profession"
-                  class="popup__input popup__input_type_profession"
-                  type="text"
-                  placeholder="О себе"
-                  id="popup__profession"
-                  required
-                  minlength="2"
-                  maxlength="200"
-                />
-                <span class="popup__error popup__profession-error"></span>
-              </div>
-              <button type="submit" class="popup__save-btn" aria-label="Кнопка отправки формы на сервер">Сохранить</button>
-            </form>
+            <p class="profile__profession">Исследователь океана</p>
           </div>
         </div>
-      </div>
+        <button type="button" class="profile__add-btn" aria-label="Кнопка добавления новой карточки"></button>
+      </section>
 
-      <div class="popup popup_type_card-add">
-        <div class="popup__body">
-          <div class="popup__content">
-            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-            <h2 class="popup__title">Новое место</h2>
-            <form class="popup__inputs" id="add-place-form" name="popup__inputs">
-              <div class="popup__divide-container">
-                <input
-                  name="popup_name"
-                  class="popup__input popup__input_type_title"
-                  type="text"
-                  placeholder="Название"
-                  id="popup__title"
-                  required
-                  minlength="2"
-                  maxlength="30"
-                />
-                <span class="popup__error popup__title-error"></span>
-              </div>
-              <div class="popup__divide-container">
-                <input
-                  name="popup_link"
-                  class="popup__input popup__input_type_link"
-                  type="url"
-                  placeholder="Ссылка на картинку"
-                  id="popup__link"
-                  required
-                />
-                <span class="popup__error popup__link-error"></span>
-              </div>
-              <button type="submit" class="popup__save-btn popup__btn-disabled" disabled aria-label="Кнопка создания новой карточки">Создать</button>
-            </form>
-          </div>
-        </div>
-      </div>
+      <section class="elements"></section>
+    </main>
+    <footer class="footer">
+      <p class="footer__text">&copy; 2022 Mesto Russia</p>
+    </footer>
 
-      <div class="popup popup_type_picture">
-        <div class="popup__body">
-          <div class="popup__content-image">
-            <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
-            <img class="popup__picture" />
-            <h2 class="popup__text"></h2>
-          </div>
+    <div class="popup popup_type_profile">
+      <div class="popup__body">
+        <div class="popup__content">
+          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__inputs" id="edit-profile-form" name="popup__inputs" novalidate>
+            <div class="popup__divide-container">
+              <input name="popup_name" class="popup__input popup__input_type_name" type="text" placeholder="Имя"
+                id="popup__name" required minlength="2" maxlength="40" />
+              <span class="popup__error popup__name-error"></span>
+            </div>
+            <div class="popup__divide-container">
+              <input name="popup_profession" class="popup__input popup__input_type_profession" type="text"
+                placeholder="О себе" id="popup__profession" required minlength="2" maxlength="200" />
+              <span class="popup__error popup__profession-error"></span>
+            </div>
+            <button type="submit" class="popup__save-btn"
+              aria-label="Кнопка отправки формы на сервер">Сохранить</button>
+          </form>
         </div>
       </div>
     </div>
 
-    <template class="template template__new-card">
-      <article class="element">
-        <img class="element__image" src="#" alt="#" />
-        <div class="element__trash"></div>
-        <div class="element__base">
-          <h2 class="element__title"></h2>
-          <button type="button" class="element__like" aria-label="Кнопка лайка"></button>
+    <div class="popup popup_type_card-add">
+      <div class="popup__body">
+        <div class="popup__content">
+          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__inputs" id="add-place-form" name="popup__inputs" novalidate>
+            <div class="popup__divide-container">
+              <input name="popup_name" class="popup__input popup__input_type_title" type="text" placeholder="Название"
+                id="popup__title" required minlength="2" maxlength="30" />
+              <span class="popup__error popup__title-error"></span>
+            </div>
+            <div class="popup__divide-container">
+              <input name="popup_link" class="popup__input popup__input_type_link" type="url"
+                placeholder="Ссылка на картинку" id="popup__link" required />
+              <span class="popup__error popup__link-error"></span>
+            </div>
+            <button type="submit" class="popup__save-btn popup__btn-disabled" disabled
+              aria-label="Кнопка создания новой карточки">Создать</button>
+          </form>
         </div>
-      </article>
-    </template>
+      </div>
+    </div>
 
-    <script type="module" src="./scripts/index.js" defer></script>
-    <script type="module" src="./scripts/Card.js" defer></script>
-    <script type="module" src="./scripts/FormValidator.js" defer></script>
-    <script type="module" src="./scripts/initialCards.js" defer></script>
-    <script type="module" src="./scripts/selectors.js" defer></script>
-  </body>
+    <div class="popup popup_type_picture">
+      <div class="popup__body">
+        <div class="popup__content-image">
+          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+          <img class="popup__picture" />
+          <h2 class="popup__text"></h2>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <template class="template template__new-card">
+    <article class="element">
+      <img class="element__image" src="#" alt="#" />
+      <div class="element__trash"></div>
+      <div class="element__base">
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like" aria-label="Кнопка лайка"></button>
+      </div>
+    </article>
+  </template>
+
+  <script type="module" src="./scripts/index.js" defer></script>
+  <script type="module" src="./scripts/Card.js" defer></script>
+  <script type="module" src="./scripts/FormValidator.js" defer></script>
+  <script type="module" src="./scripts/initialCards.js" defer></script>
+  <script type="module" src="./scripts/selectors.js" defer></script>
+</body>
+
 </html>
