--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 <body class="body">
   <div class="content">
     <header class="header">
-      <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Логоти Место" />
+      <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Логотип Место" />
     </header>
     <main class="page">
       <section class="profile">
         <div class="profile__container">
-          <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Изображение профиля" />
+          <div class="profile__avatar-container">
+            <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Изображение профиля" />
+            <div class="profile__avatar-overlay"></div>
+          </div>
           <div class="profile__info">
             <div class="profile__title">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <h1 class="profile__name"></h1>
               <button type="button" class="profile__edit-btn" aria-label="Кнопка изменения данных профиля"></button>
             </div>
-            <p class="profile__profession">Исследователь океана</p>
+            <p class="profile__profession"></p>
           </div>
         </div>
         <button type="button" class="profile__add-btn" aria-label="Кнопка добавления новой карточки"></button>
@@ -80,6 +83,37 @@
       </div>
     </div>
 
+    <div class="popup popup_type_card-remove">
+      <div class="popup__body">
+        <div class="popup__content">
+          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+          <h2 class="popup__title">Вы уверены?</h2>
+          <form class="popup__inputs" id="card-remove-form" name="popup__inputs" novalidate>
+            <button type="submit" class="popup__save-btn"
+              aria-label="Кнопка удаления карточки">Да</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup popup_type_profile-image">
+      <div class="popup__body">
+        <div class="popup__content">
+          <button type="button" class="popup__close-btn" aria-label="Кнопка закрытия попапа"></button>
+          <h2 class="popup__title">Обновить аватар</h2>
+          <form class="popup__inputs" id="avatar-edit-form" name="popup__inputs" novalidate>
+            <div class="popup__divide-container">
+              <input name="popup_link" class="popup__input popup__input_type_link" type="url"
+                placeholder="Ссылка на картинку" id="popup__link" required />
+              <span class="popup__error popup__link-error"></span>
+            </div>
+            <button type="submit" class="popup__save-btn"
+              aria-label="Кнопка удаления карточки">Сохранить</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <div class="popup popup_type_picture">
       <div class="popup__body">
         <div class="popup__content-image">
@@ -97,7 +131,10 @@
       <div class="element__trash"></div>
       <div class="element__base">
         <h2 class="element__title"></h2>
-        <button type="button" class="element__like" aria-label="Кнопка лайка"></button>
+        <div class="element__like-container">
+          <button type="button" class="element__like" aria-label="Кнопка лайка"></button>
+          <span class="element__like-amount"></span>
+        </div>
       </div>
     </article>
   </template>
