fix: исправил id

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <form class="popup__inputs" id="avatar-edit-form" name="popup__inputs" novalidate>
             <div class="popup__divide-container">
               <input name="popup_link" class="popup__input popup__input_type_link" type="url"
-                placeholder="Ссылка на картинку" id="popup__link" required />
+                placeholder="Ссылка на картинку" id="popup__link_avatar" required />
               <span class="popup__error popup__link-error"></span>
             </div>
             <button type="submit" class="popup__save-btn"
