fix: поправил оставшиеся замечания

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
           <h2 class="popup__title">Обновить аватар</h2>
           <form class="popup__inputs" id="avatar-edit-form" name="popup__inputs" novalidate>
             <div class="popup__divide-container">
-              <input name="link" class="popup__input popup__input_type_link" type="url"
-                placeholder="Ссылка на картинку" id="popup__link_avatar" required />
-              <span class="popup__error popup__link-error"></span>
+              <input name="avatar" class="popup__input popup__input_type_link" type="url"
+                placeholder="Ссылка на картинку" id="popup__link-avatar" required />
+              <span class="popup__error popup__link-avatar-error"></span>
             </div>
             <button type="submit" class="popup__save-btn" id="popup_type_profile-image-save-btn"
               aria-label="Кнопка удаления карточки">Сохранить</button>
